3.31.92: gnome-shell crashing with "assertion failed (priv->width > -1): (-1 > -1)" in st_image_content_get_preferred_size
In 3.31.92 only, gnome-shell is crashing with assertion failed (priv->width > -1): (-1 > -1)
in st_image_content_get_preferred_size
#0 __GI_raise (sig=<optimized out>) at ../sysdeps/unix/sysv/linux/raise.c:50
set = {__val = {0, 549, 550, 551, 552, 553, 554, 555, 556, 557, 558, 559, 0, 6773166934093266944, 94760170819424, 140736675524736}}
pid = <optimized out>
tid = <optimized out>
ret = <optimized out>
#1 0x0000562f1252101b in dump_gjs_stack_on_signal_handler (signo=6) at ../src/main.c:372
sa = {__sigaction_handler = {sa_handler = 0x562f12521050 <dump_gjs_stack_alarm_sigaction>, sa_sigaction = 0x562f12521050 <dump_gjs_stack_alarm_sigaction>}, sa_mask = {__val = {0 <repeats 16 times>}}, sa_flags = 0, sa_restorer = 0x0}
i = 65
#2 <signal handler called>
No locals.
#3 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
set = {__val = {0, 94760219229425, 94760219229596, 94760219229296, 94760219229596, 0, 0, 0, 0, 0, 549755813888, 139968633767332, 553978232832, 139968635133088, 139968635133088, 343597383809}}
pid = <optimized out>
tid = <optimized out>
ret = <optimized out>
#4 0x00007f4cfcaae535 in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x0, sa_sigaction = 0x0}, sa_mask = {__val = {390842023986, 511101108334, 38654705788, 0, 94760198877256, 94760212445232, 176, 139968647609581, 139968635132992, 126, 7, 18446744073709551536, 6773166934093266944, 139968648168304, 94760228424480, 126}}, sa_flags = -41120256, sa_restorer = 0x7fffcf8d39d0}
sigs = {__val = {32, 0 <repeats 15 times>}}
#5 0x00007f4cfd7c4dc3 in g_assertion_message (domain=<optimized out>, file=<optimized out>, line=<optimized out>, func=0x7f4cfca6bfe0 <__FUNCTION__.49030> "st_image_content_get_preferred_size", message=<optimized out>) at ../../../glib/gtestutils.c:2878
lstr = "155\000\377\177\000\000\001\000\000\000\000\000\000\000\260:\215\317\377\177\000\000}\261\346\374L\177\000"
s = 0x562f15c10b20 ""
#6 0x00007f4cfd81fef6 in g_assertion_message_cmpnum (domain=domain@entry=0x7f4cfca6a634 "St", file=file@entry=0x7f4cfca6bef7 "../src/st/st-image-content.c", line=line@entry=155, func=func@entry=0x7f4cfca6bfe0 <__FUNCTION__.49030> "st_image_content_get_preferred_size", expr=expr@entry=0x7f4cfca6bee6 "priv->width > -1", arg1=-1, cmp=cmp@entry=0x7f4cfca6bee4 ">", arg2=-1, numtype=105 'i') at ../../../glib/gtestutils.c:2937
s = 0x562f15f34250 "assertion failed (priv->width > -1): (-1 > -1)"
#7 0x00007f4cfca4b052 in st_image_content_get_preferred_size (content=0x562f173cd060, width=0x7fffcf8d3b00, height=0x7fffcf8d3b04) at ../src/st/st-image-content.c:155
__n1 = -1
__n2 = -1
self = <optimized out>
priv = 0x562f173cd040
texture = <optimized out>
__FUNCTION__ = "st_image_content_get_preferred_size"
#8 0x00007f4cfce6ec5f in clutter_actor_get_preferred_size (self=self@entry=0x562f1437c750, min_width_p=min_width_p@entry=0x0, min_height_p=min_height_p@entry=0x0, natural_width_p=natural_width_p@entry=0x7fffcf8d3b48, natural_height_p=natural_height_p@entry=0x7fffcf8d3b4c) at ../clutter/clutter/clutter-actor.c:9218
priv = <optimized out>
min_width = 0
min_height = 0
natural_width = 0
natural_height = 0
__FUNCTION__ = "clutter_actor_get_preferred_size"
#9 0x00007f4cfce6edc4 in clutter_actor_get_transformed_size (self=self@entry=0x562f1437c750, width=width@entry=0x7fffcf8d3be8, height=height@entry=0x7fffcf8d3bec) at ../clutter/clutter/clutter-actor.c:10994
natural_width = 0
natural_height = 0
box = {x1 = 0, y1 = 0, x2 = -4.7390249e+09, y2 = 4.59163468e-41}
priv = <optimized out>
v = {{x = -4.73902285e+09, y = 4.59163468e-41, z = -4.73907405e+09}, {x = 4.59163468e-41, y = 9.27783008e-27, z = 3.0916848e-41}, {x = 1.40129846e-45, y = 0, z = -2.35544896e+37}, {x = 4.56655144e-41, y = -9.58282563e+36, z = 4.56655144e-41}}
x_min = <optimized out>
x_max = <optimized out>
y_min = <optimized out>
y_max = <optimized out>
i = <optimized out>
__FUNCTION__ = "clutter_actor_get_transformed_size"
#10 0x00007f4cfce6ee7f in _clutter_actor_compute_resource_scale (self=0x562f1437c750, resource_scale=resource_scale@entry=0x7fffcf8d3c44) at ../clutter/clutter/clutter-actor.c:17821
bounding_rect = {origin = {x = 683, y = 27}, size = {width = -2.14944965e+37, height = 4.56655144e-41}}
priv = <optimized out>
#11 0x00007f4cfce6ef9a in clutter_actor_update_resource_scale (self=<optimized out>) at ../clutter/clutter/clutter-actor.c:17873
priv = 0x562f1437c430
resource_scale = 0
old_resource_scale = -1
__FUNCTION__ = "clutter_actor_update_resource_scale"
_g_boolean_var_ = <optimized out>
#12 0x00007f4cfce6effe in clutter_actor_ensure_resource_scale (self=0x562f1437c750) at ../clutter/clutter/clutter-actor.c:17892
priv = <optimized out>
#13 0x00007f4cfce6f0d1 in clutter_actor_real_map (self=0x562f1437c750) at ../clutter/clutter/clutter-actor.c:1530
priv = 0x562f1437c430
stage = 0x562f1427faa0
iter = <optimized out>
__FUNCTION__ = "clutter_actor_real_map"
#14 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f1437c750, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#15 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=0x562f1437c750, change=<optimized out>) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#16 0x00007f4cfce6f108 in clutter_actor_real_map (self=0x562f144e9da0) at ../clutter/clutter/clutter-actor.c:1541
priv = 0x562f144e9a80
stage = <optimized out>
iter = 0x562f1437c750
__FUNCTION__ = "clutter_actor_real_map"
#17 0x00007f4cfca67b59 in st_widget_map (actor=0x562f144e9da0) at ../src/st/st-widget.c:479
self = 0x562f144e9da0
#18 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f144e9da0, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#19 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=0x562f144e9da0, change=<optimized out>) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#20 0x00007f4cfce6f108 in clutter_actor_real_map (self=0x562f1445f3c0) at ../clutter/clutter/clutter-actor.c:1541
priv = 0x562f1445f0a0
stage = <optimized out>
iter = 0x562f144e9da0
__FUNCTION__ = "clutter_actor_real_map"
#21 0x00007f4cfca67b59 in st_widget_map (actor=0x562f1445f3c0) at ../src/st/st-widget.c:479
self = 0x562f1445f3c0
#22 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f1445f3c0, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#23 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=0x562f1445f3c0, change=<optimized out>) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#24 0x00007f4cfce6f108 in clutter_actor_real_map (self=0x562f16a45860) at ../clutter/clutter/clutter-actor.c:1541
priv = 0x562f16a45540
stage = <optimized out>
iter = 0x562f1445f3c0
__FUNCTION__ = "clutter_actor_real_map"
#25 0x00007f4cfca67b59 in st_widget_map (actor=0x562f16a45860) at ../src/st/st-widget.c:479
self = 0x562f16a45860
#26 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f16a45860, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#27 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=0x562f16a45860, change=<optimized out>) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#28 0x00007f4cfce6f108 in clutter_actor_real_map (self=0x562f14b51490) at ../clutter/clutter/clutter-actor.c:1541
priv = 0x562f14b51170
stage = <optimized out>
iter = 0x562f16a45860
__FUNCTION__ = "clutter_actor_real_map"
#29 0x00007f4cfca67b59 in st_widget_map (actor=0x562f14b51490) at ../src/st/st-widget.c:479
self = 0x562f14b51490
#30 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f14b51490, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#31 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=0x562f14b51490, change=<optimized out>) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#32 0x00007f4cfce6f108 in clutter_actor_real_map (self=0x562f1553b590) at ../clutter/clutter/clutter-actor.c:1541
priv = 0x562f1553b270
stage = <optimized out>
iter = 0x562f14b51490
__FUNCTION__ = "clutter_actor_real_map"
#33 0x00007f4cfca67b59 in st_widget_map (actor=0x562f1553b590) at ../src/st/st-widget.c:479
self = 0x562f1553b590
#34 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f1553b590, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#35 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=0x562f1553b590, change=<optimized out>) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#36 0x00007f4cfce6f108 in clutter_actor_real_map (self=0x562f1553a500) at ../clutter/clutter/clutter-actor.c:1541
priv = 0x562f1553a1e0
stage = <optimized out>
iter = 0x562f1553b590
__FUNCTION__ = "clutter_actor_real_map"
#37 0x00007f4cfca67b59 in st_widget_map (actor=0x562f1553a500) at ../src/st/st-widget.c:479
self = 0x562f1553a500
#38 0x00007f4cfce6621d in clutter_actor_set_mapped (self=0x562f1553a500, mapped=<optimized out>) at ../clutter/clutter/clutter-actor.c:1292
__FUNCTION__ = "clutter_actor_set_mapped"
_g_boolean_var_ = <optimized out>
#39 0x00007f4cfce690b2 in clutter_actor_update_map_state (self=self@entry=0x562f1553a500, change=change@entry=MAP_STATE_CHECK) at ../clutter/clutter/clutter-actor.c:1475
parent = <optimized out>
must_be_realized = 1
priv = <optimized out>
should_be_mapped = 1
may_be_realized = 1
was_mapped = <optimized out>
__FUNCTION__ = "clutter_actor_update_map_state"
#40 0x00007f4cfce759da in clutter_actor_real_show (self=0x562f1553a500) at ../clutter/clutter/clutter-actor.c:1694
priv = <optimized out>
#41 0x00007f4cfd8dde7d in g_closure_invoke (closure=0x562f14244b30, return_value=0x0, n_param_values=1, param_values=0x7fffcf8d4230, invocation_hint=0x7fffcf8d41b0) at ../../../gobject/gclosure.c:810
marshal = 0x7f4cfd8dc370 <g_type_class_meta_marshal>
marshal_data = 0x88
in_marshal = 0
real_closure = 0x562f14244b10
__FUNCTION__ = "g_closure_invoke"
#42 0x00007f4cfd8f16dc in signal_emit_unlocked_R (node=node@entry=0x562f14233870, detail=detail@entry=0, instance=instance@entry=0x562f1553a500, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7fffcf8d4230) at ../../../gobject/gsignal.c:3565
accumulator = 0x0
emission = {next = 0x7fffcf8d8980, instance = 0x562f1553a500, ihint = {signal_id = 53, detail = 0, run_type = G_SIGNAL_RUN_FIRST}, state = EMISSION_RUN, chain_type = 94760206065456}
class_closure = 0x562f14244b30
hlist = <optimized out>
handler_list = <optimized out>
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 53
max_sequential_handler_number = 49409
return_value_altered = <optimized out>
#43 0x00007f4cfd8fa46e in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7fffcf8d43e0) at ../../../gobject/gsignal.c:3391
instance_and_params = 0x7fffcf8d4230
signal_return_type = <optimized out>
param_values = 0x7fffcf8d4248
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__FUNCTION__ = "g_signal_emit_valist"
#44 0x00007f4cfd8fab2f in g_signal_emit (instance=instance@entry=0x562f1553a500, signal_id=<optimized out>, detail=detail@entry=0) at ../../../gobject/gsignal.c:3447
var_args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7fffcf8d44c0, reg_save_area = 0x7fffcf8d4400}}
#45 0x00007f4cfce773d2 in clutter_actor_show (self=0x562f1553a500) at ../clutter/clutter/clutter-actor.c:1801
priv = 0x562f1553a1e0
priv = <optimized out>
__FUNCTION__ = "clutter_actor_show"
_g_boolean_var_ = <optimized out>
__inst = <optimized out>
__t = <optimized out>
__r = <optimized out>
#46 clutter_actor_show (self=0x562f1553a500) at ../clutter/clutter/clutter-actor.c:1764
priv = <optimized out>
__FUNCTION__ = "clutter_actor_show"
_g_boolean_var_ = <optimized out>
__inst = <optimized out>
__t = <optimized out>
__r = <optimized out>
called from MessageTray
::_showNotification()
(but this log is from a different machine's crash report):
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: **
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: St:ERROR:../src/st/st-image-content.c:155:st_image_content_get_preferred_size: assertion failed (priv->width > -1): (-1 > -1)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: GNOME Shell crashed with signal 6
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: == Stack trace for context 0x55e7108c61c0 ==
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #0 55e7142db810 i resource:///org/gnome/shell/ui/messageTray.js:1309 (7fe3358a5700 @ 432)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #1 55e7142db758 i resource:///org/gnome/shell/ui/messageTray.js:1225 (7fe3358a53a0 @ 462)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #2 55e7142db6a8 i resource:///org/gnome/shell/ui/messageTray.js:1089 (7fe3358a3f70 @ 303)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #3 7ffc893548c0 b self-hosted:979 (7fe33584e8b0 @ 440)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #4 7ffc893549b0 b resource:///org/gnome/gjs/modules/signals.js:128 (7fe335bcb820 @ 386)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #5 55e7142db618 i resource:///org/gnome/shell/ui/messageTray.js:795 (7fe3358a3040 @ 100)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #6 55e7142db570 i resource:///org/gnome/shell/ui/windowAttentionHandler.js:47 (7fe335684ee0 @ 489)
mars 08 09:32:41 hostname org.gnome.Shell.desktop[2198]: #7 7ffc89356000 b self-hosted:979 (7fe33584e8b0 @ 440)
Edited by Daniel van Vugt